// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should accepnt data-analytics attribute 1`] = `
.c10.c10.c10.c10.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 16px;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 9999px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(214,28%,84%,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.17,0,1,1);
  transition-timing-function: cubic-bezier(0.17,0,1,1);
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c6.c6.c6.c6.c6 {
  margin-bottom: 0px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11.c11.c11.c11.c11 {
  margin-left: 4px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c9.c9.c9.c9.c9:hover + div {
  border-color: hsla(214,28%,84%,1);
  background-color: hsla(211,20%,52%,0.06);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="radio-group-199-label"
      class="c0"
      data-analytics-radio-group="fruits"
      data-blade-component="radio-group"
      role="radiogroup"
    >
      <span
        data-blade-component="form-label"
        id="radio-group-199-label"
        style="width: auto; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Select fruit
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </span>
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c0"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <label
                class="c7"
                data-blade-component="radio-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-200-helptext-201"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      data-analytics-radio-value="apple"
                      name="radio-group-199"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="c10"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Apple
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioGroup /> should render with help text 1`] = `
.c10.c10.c10.c10.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 16px;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 9999px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(214,28%,84%,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.17,0,1,1);
  transition-timing-function: cubic-bezier(0.17,0,1,1);
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c6.c6.c6.c6.c6 {
  margin-bottom: 8px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11.c11.c11.c11.c11 {
  margin-left: 4px;
}

.c13.c13.c13.c13.c13 {
  margin-bottom: 0px;
}

.c14.c14.c14.c14.c14 {
  margin-top: 4px;
}

.c15.c15.c15.c15.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 4px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c16.c16.c16.c16.c16 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  word-break: break-word;
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c9.c9.c9.c9.c9:hover + div {
  border-color: hsla(214,28%,84%,1);
  background-color: hsla(211,20%,52%,0.06);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="radio-group-15-label"
      class="c0"
      data-blade-component="radio-group"
      role="radiogroup"
    >
      <span
        data-blade-component="form-label"
        id="radio-group-15-label"
        style="width: auto; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Select fruits
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              >
                ,Select one
              </p>
            </div>
          </div>
        </div>
      </span>
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c0"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <label
                class="c7"
                data-blade-component="radio-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-16-helptext-17"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      name="radio-group-15"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="c10"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Apple
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <label
                class="c7"
                data-blade-component="radio-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-18-helptext-19"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      name="radio-group-15"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="c10"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Mango
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c13"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <label
                class="c7"
                data-blade-component="radio-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-20-helptext-21"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      name="radio-group-15"
                      role="radio"
                      type="radio"
                      value="orange"
                    />
                    <div
                      class="c10"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Orange
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c14"
          data-blade-component="base-box"
        >
          <span
            class="c15"
            data-blade-component="base-box"
          >
            <span
              class="c16"
              data-blade-component="text"
            >
              Select one
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioGroup /> should render with label 1`] = `
.c10.c10.c10.c10.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 16px;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 9999px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(214,28%,84%,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.17,0,1,1);
  transition-timing-function: cubic-bezier(0.17,0,1,1);
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c6.c6.c6.c6.c6 {
  margin-bottom: 8px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11.c11.c11.c11.c11 {
  margin-left: 4px;
}

.c13.c13.c13.c13.c13 {
  margin-bottom: 0px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c9.c9.c9.c9.c9:hover + div {
  border-color: hsla(214,28%,84%,1);
  background-color: hsla(211,20%,52%,0.06);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="radio-group-7-label"
      class="c0"
      data-blade-component="radio-group"
      role="radiogroup"
    >
      <span
        data-blade-component="form-label"
        id="radio-group-7-label"
        style="width: auto; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Select fav fruit
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </span>
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c0"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <label
                class="c7"
                data-blade-component="radio-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-1-helptext-2"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      name="radio-group-7"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="c10"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Apple
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <label
                class="c7"
                data-blade-component="radio-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-3-helptext-4"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      name="radio-group-7"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="c10"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Mango
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c13"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <label
                class="c7"
                data-blade-component="radio-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c8"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-5-helptext-6"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c9"
                      name="radio-group-7"
                      role="radio"
                      type="radio"
                      value="orange"
                    />
                    <div
                      class="c10"
                      data-blade-component="radio-icon-wrapper"
                    />
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Orange
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
